--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,7 +10,8 @@
         "endroid/qr-code": "^6.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1.67"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
