--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
-        "maatwebsite/excel": "^3.1.67"
+        "maatwebsite/excel": "^3.1.67",
+        "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
