--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1.67",
+        "nuwave/lighthouse": "^6.62",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
